--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
     font-family: 'Encode Sans Condensed', sans-serif;
     padding-top: 20px;
     box-sizing: border-box;
+    display: block;
 }
 
 * {
