--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ body {
     color: inherit;
 }
 
+header {
+    padding-bottom: 40px;
+}
+
 .clearfix:after {
     content: '';
     display: block;
@@ -171,7 +175,7 @@ footer ul li a {
 }
 
 .poster {
-    width: 25%;
+    width: 40%;
     float: left;
     border-radius: 40px 40px 40px 0;
     box-shadow: 5px 5px #fff;
@@ -179,7 +183,7 @@ footer ul li a {
 
 .movie-info {
     float: left;
-    width: 75%;
+    width: 60%;
     padding-left: 40px;
     box-sizing: border-box;
 }
@@ -232,17 +236,18 @@ p.description {
 }
 
 main ul {
-    padding: 30px 0;
+    padding: 0;
 }
 
 main li {
+    padding: 30px 0;
     margin-right: 10px;
     display: inline-block;
 }
 
 main li a {
     display: inline-block;
-
+    text-transform: uppercase;
     padding: 10px 20px;
     margin: 0 10px;
     border-radius: 40px 40px 40px 40px;
@@ -267,13 +272,19 @@ main li a:hover, main li a.current {
 }
 
 .results ul {
-    padding: 20px 0;
+    padding: 0;
     text-align: center;
+    text-transform: uppercase;
 }
+
+.results ul li {
+    padding: 20px 0;
+}
+
 .results .one-item {
     width: 100%;
     padding: 20px;
-    box-sizing:  border-box;
+    box-sizing: border-box;
     display: block;
     margin-bottom: 0;
 }
@@ -316,7 +327,7 @@ main li a:hover, main li a.current {
 .results .subtitle {
     font-size: 18px;
     color: #2f2f2f;
-    margin:  0;
+    margin: 0;
 }
 
 @media screen and (max-width: 1240px) {
