--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ header {
     height: 63px;
     background: url("../images/logo.png") top left no-repeat;
     background-size: 250px;
-    text-indent: -300em;
+    color: rgba(0, 0, 0, 0);
 }
 
 .button {
@@ -150,7 +150,7 @@ footer ul li a {
 }
 
 .background-color {
-    background-color: rgba(67, 167, 71, 0.8);
+    background-color: rgba(67, 167, 71, 0.9);
     width: 100%;
     height: 100%;
 }
@@ -182,7 +182,8 @@ footer ul li a {
     border-radius: 40px 40px 40px 0;
     box-shadow: 5px 5px #fff;
     background-position: center center;
-    background-size: 100%;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 .movie-info {
@@ -208,6 +209,13 @@ footer ul li a {
 
 p.description {
     margin: 40px 0 10px 0;
+}
+
+strong.full-title {
+    color: #dddddd;
+    display: block;
+    font-weight: bold;
+    font-size: 18px;
 }
 
 .one-item {
@@ -309,14 +317,14 @@ main li a:hover, main li a.current {
     padding-top: 225px;
     float: left;
     background-position: center center;
-    background-size: 110%;
+    background-size: 110% 110%;
     transition: 0.3s;
     border-radius: 40px 40px 40px 0;
 }
 
 .results .small-info {
     float: left;
-    width: 900px;
+    width: calc(100% - 171px);
     margin-left: 20px;
 }
 
@@ -338,20 +346,25 @@ main li a:hover, main li a.current {
     color: #fff;
     font-size: 52px;
     transition: 0.3s;
+    box-sizing: border-box;
+    width: calc(100% - 30px);
 }
 
 .results .year {
     color: #ddd;
     font-size: 32px;
     transition: 0.3s;
+    box-sizing: border-box;
+    width: calc(100% - 30px);
 
 }
 
 .results .one-item:hover div.small-poster {
-    background-size: 100%;
+    background-size: 100% 100%;
 }
-.results .one-item:hover .title, .results .one-item:hover .year  {
-   padding-left: 30px;
+
+.results .one-item:hover .title, .results .one-item:hover .year {
+    padding-left: 30px;
 }
 
 .results .subtitle {
