--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ strong.full-title {
 .one-item {
     display: inline-block;
     width: 150px;
-    margin-right: 19px;
+    margin-right: 15px;
     margin-bottom: 20px;
 }
 
@@ -253,7 +253,7 @@ main ul {
 
 main li {
     padding: 30px 0;
-    margin-right: 10px;
+    margin-right: 0;
     display: inline-block;
 }
 
