--- a/templates/movie.html
+++ b/templates/movie.html
@@ -16,7 +16,7 @@
 
                 <div class="more-info" id="cast-info" style="display: none;">
                     {{#actors}}
-                    <div class="one-item">
+                    <div class="one-item actor" actorID="{{id}}">
                         <div style="background-image: url({{photo}});"></div>
                         <span class="title">{{name}}</span><span class="subtitle">{{character}}</span>
                     </div>
