--- a/templates/results.html
+++ b/templates/results.html
@@ -2,6 +2,7 @@
     <div class="background-color">
         <div class="wrapper clearfix">
             <div class="results">
+                <h1 class="result-count">{{total}} matches</h1>
                 {{#hasPages}}
                 <ul>
                     {{#prevPage}}
